--- a/config_tun.json
+++ b/config_tun.json
@@ -89,7 +89,7 @@
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
       { "domain": ["clash.razord.top", "yacd.metacubex.one", "yacd.haishan.me", "d.metacubex.one"], "outbound": "🎯 全球直连" },
-      { "domain_suffix": ["ddqq.top", "ddqq.fun"], "outbound": "🎯 全球直连" },
+      { "type": "field", "domain_suffix": ["ddqq.top", "ddqq.fun"], "outbound": "🎯 全球直连" },
       { "IP-CIDR": ["148.135.102.83/32", "148.135.85.14/32", "38.207.172.193/32", "85.194.246.115/32"], "outbound": "🎯 全球直连" },
       { "ip_is_private": true, "outbound": "🎯 全球直连" },
       { "rule_set": "adblockplus", "outbound": "🛑 广告拦截" },
