--- a/config_tun.json
+++ b/config_tun.json
@@ -6,12 +6,15 @@
   "experimental": {
     "clash_api": {
       "external_controller": "0.0.0.0:9090",
-      "external_ui": "ui",
+      "external_ui": "/etc/sing-box/ui",
       "secret": "",
       "external_ui_download_url": "https://ghp.ci/https://github.com/MetaCubeX/metacubexd/archive/refs/heads/gh-pages.zip",
       "external_ui_download_detour": "🎯 全球直连",
       "default_mode": "rule"
-      }
+      },
+      "cache_file": {
+      "enabled": true
+    }
     },
   "dns": {
     "servers": [
