--- a/config_tun_v6.json
+++ b/config_tun_v6.json
@@ -47,7 +47,7 @@
       "strict_route": true,
       "sniff": true,
       "endpoint_independent_nat": false,
-      "stack": "system",
+      "stack": "dual",
       "platform": {
         "http_proxy": {
           "enabled": true,
