--- a/config_tproxy_v6.json
+++ b/config_tproxy_v6.json
@@ -42,7 +42,7 @@
       "type": "tproxy",
       "tag": "tproxy-in",
       "listen": "0.0.0.0",
-      "listen_port": 7895,
+      "listen_port": [::]:7895,
       "sniff": true,
       "sniff_override_destination": false
     },
