--- a/config_tproxy.json
+++ b/config_tproxy.json
@@ -86,6 +86,8 @@
   "route": {
     "rules": [
       { "type": "logical", "mode": "or", "rules": [{ "port": 53 }, { "protocol": "dns" }], "outbound": "dns-out" },
+      { "type": "field", "port": "9993", "outbound": "direct" },
+      { "type": "field", "source-port": "9993", "outbound": "direct" },
       { "rule_set": "geosite-category-ads-all", "outbound": "🛑 广告拦截" },
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
