--- a/config_tproxy.json
+++ b/config_tproxy.json
@@ -86,8 +86,8 @@
   "route": {
     "rules": [
       { "type": "logical", "mode": "or", "rules": [{ "port": 53 }, { "protocol": "dns" }], "outbound": "dns-out" },
-      { "type": "field", "port": "9993", "outbound": "direct" },
-      { "type": "field", "source-port": "9993", "outbound": "direct" },
+      { "port": [9993, 5443, 6443, 8080, 8443], "outbound": "🎯 全球直连" },
+      { "source_port": [9993, 5000, 5001, 80, 443, 5080, 8000, 8080, 8800, 9350, 10002, 20000, 20002, 21680], "outbound": "🎯 全球直连" },
       { "rule_set": "geosite-category-ads-all", "outbound": "🛑 广告拦截" },
       { "clash_mode": "direct", "outbound": "🎯 全球直连" },
       { "clash_mode": "global", "outbound": "GLOBAL" },
