--- a/config_tproxy_lite.json
+++ b/config_tproxy_lite.json
@@ -73,7 +73,7 @@
     { "tag": "⭕ 欧洲节点", "type": "selector", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["eu|EU|DE|PL|德国|波兰|Europ"] }] },
     { "tag": "🔯 香港自动", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "include", "keywords": ["🇭🇰|HK|hk|香港|港|HongKong"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
     { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["网站|地址|剩余|过期|时间|有效"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
-    { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭🇰 香港节点", "🇹🇼 台湾节点", "🇸🇬 新加坡节点", "🇯🇵 日本节点", "🇰🇷 韩国节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
+    { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🎯 全球直连", "🇭🇰 香港节点", "🇯🇵 日本节点", "🇺🇲 美国节点", "⭕ 欧洲节点", "🐸 手动切换"] },
     { "tag": "🎯 全球直连", "type": "direct" },
     { "tag": "🛑 全部阻断", "type": "block" },
     { "tag": "🛑 广告拦截", "type": "selector", "outbounds": ["🛑 全部阻断", "🎯 全球直连", "🚀 节点选择"] },
