--- a/config_tun_v6_mobile.json
+++ b/config_tun_v6_mobile.json
@@ -40,7 +40,10 @@
     "inbounds": [
     {
       "type": "tun",
-      "address": "172.19.0.1/30",
+      "address": [
+        "172.19.0.1/30",
+        "fdfe:dcba:9876::1/126"
+      ],
       "mtu": 9000,
       "auto_route": true,
       "strict_route": true,
