--- a/1.12.x/config_tproxy_v4.json
+++ b/1.12.x/config_tproxy_v4.json
@@ -3,6 +3,7 @@
     "disabled": false,
     "level": "info",
     "timestamp": true
+    ENABLE_DEPRECATED_SPECIAL_OUTBOUNDS=true
   },
   
   "experimental": {
